--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<li><a href="mailto:admin@qingzhi.tech" class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; QingZhiTech</li><li>Crafted with <i class='fa fa-heart animated' style="color: #e74c3c;"></i> by <a rel="me" href="https://harkin.cn" target="_blank" style="color: #000000;text-decoration:none;">Harkin</a></li>
+					<li>&copy; QingZhiTech</li><li>Crafted with <i class='fa fa-heart animated' style="color: #e74c3c;"></i> by <a rel="me" href="https://harkin.cn" target="_blank" style="color: #e74c3c;text-decoration:none;">Harkin</a></li>
 				</ul>
 			</footer>
 
