--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>清执I.M科技社 | QingZhi.Tech</title>
+		<title>清执I.M科技社 | Qingzhi.Tech</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/qingzhitech/index/assets/css/main.css" />
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
-				<h1>清执I.M科技社 | QingZhi.Tech</h1>
+				<h1>清执I.M科技社 | Qingzhi.Tech</h1>
 				<p>我们的官网正在努力建设中……<br />
 				同时我们也正在招新，欢迎加入！</p>
 			</header>
@@ -25,7 +25,7 @@
 			<footer id="footer">
 				<ul class="icons">
 	
-					<li><a href="https://github.com/QingZhiTech" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://github.com/qingzhitech" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="mailto:admin@qingzhi.tech" class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
@@ -34,7 +34,7 @@
 			</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/main.js"></script>
+			<script src="https://cdn.jsdelivr.net/gh/qingzhitech/index/assets/js/main.js"></script>
 
 	</body>
 </html>
