--- a/index.html
+++ b/index.html
@@ -14,13 +14,7 @@
 				<p>我们的官网正在努力建设中……<br />
 				同时我们也正在招新，欢迎加入！</p>
 			</header>
-
-		<!-- Signup Form
-			<form id="signup-form" method="post" action="#">
-				<input type="email" name="email" id="email" placeholder="Email Address" />
-				<input type="submit" value="Sign Up" />
-			</form>-->
-
+		
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
@@ -29,7 +23,7 @@
 					<li><a href="mailto:admin@qingzhi.tech" class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; QingZhiTech</li><li>Crafted with <i class='fa fa-heart animated' style="color: #e74c3c;"></i> by <a rel="me" href="https://harkin.cn" target="_blank" style="color: #e74c3c;text-decoration:none;">Harkin</a></li>
+					<li>&copy; QingZhiTech</li><li>Crafted with <i class='fa fa-heart animated' style="color: #e74c3c;"></i> by <a rel="me" href="https://harkin.cn" target="_blank" style="color: #e74c3c;text-decoration:none;">Harkin</a>  <a rel="me" href="https://docs.qq.com/slide/DTFVyeEdIT2lzUHVi" target="_blank" style="color: #000000;text-decoration:none;">PowerPoint</a> </li>
 				</ul>
 			</footer>
 
