add jsdelivr to open images and music

--- a/Coolversion.html
+++ b/Coolversion.html
@@ -9,7 +9,7 @@
 	<span style="font-size:32px;color:#000"><center>凤霞科技社</center></span> 
 </h1>
 
-动感EDM<audio id="audios" src="/Coolversion/aiqingmaimai.mp3" preload="1" autoplay="1" controls="1" loop="loop" __idm_id__="658297857">动感EDM</audio>
+动感EDM<audio id="audios" src="https://cdn.jsdelivr.net/gh/qingzhitech/index/Coolversion/aiqingmaimai.mp3" preload="1" autoplay="1" controls="1" loop="loop" __idm_id__="658297857">动感EDM</audio>
 <script>
 function audioAutoPlay(id){  
     var audio = document.getElementById(id),
@@ -33,7 +33,7 @@ audioAutoPlay('audios');
 	<p>
 		<span style="font-size:32px;background-color:#E53333;color:#60D978;"><span style="font-family:NSimSun;"><b>清远清新 凤霞科技社 人才济济 都是dalao</b></span></span> 
 	</p>
-	<center><img src="/Coolversion/fengxia.webp" width="600px"></center>
+	<center><img src="https://cdn.jsdelivr.net/gh/qingzhitech/index/Coolversion/fengxia.webp" width="600px"></center>
 
 	<p style="font-size:36px;color:blue;text-align:right;">尊҉&nbsp;&nbsp;&nbsp;&nbsp;山清水秀 人杰地灵 人才济济 齐上名校&nbsp;&nbsp;&nbsp;&nbsp;҉尊</p>
 	<p>	
@@ -46,7 +46,7 @@ audioAutoPlay('audios');
 	<p>
 		<span style="font-size:18px;font-family:KaiTi_GB2312;"><span style="background-color:#00D5FF;font-size:18px;font-family:KaiTi_GB2312;">文案，有没有能吹的文案？？？</span></span> 
 	</p>
-<center><img src="/Coolversion/shiyanshi.webp" width="500px"></center>
+<center><img src="https://cdn.jsdelivr.net/gh/qingzhitech/index/Coolversion/shiyanshi.webp" width="500px"></center>
 	<p>
 		<span style="font-size:18px;"><span style="background-color:#00D5FF;font-size:18px;"><br>
 </span></span> 
